Implementation of homework conditions 3 weeks
