# api-docs.yaml
@@ -358,7 +358,8 @@ paths:
           format: int32
       requestBody:
         content:
-          multipart/form-data:
+          multipart/form-data: {}
+          application/json:
             schema:
               required:
               - image
@@ -375,7 +376,37 @@ paths:
         "401":
           description: Unauthorized
           content:
-            '*/*':
+            image/png:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/jpeg:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/gif:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/*:
               schema:
                 type: object
                 additionalProperties:
@@ -388,7 +419,37 @@ paths:
         "403":
           description: Forbidden
           content:
-            '*/*':
+            image/png:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/jpeg:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/gif:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/*:
               schema:
                 type: object
                 additionalProperties:
@@ -401,7 +462,37 @@ paths:
         "404":
           description: Not found
           content:
-            '*/*':
+            image/png:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/jpeg:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/gif:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/*:
               schema:
                 type: object
                 additionalProperties:
@@ -433,14 +524,34 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            '*/*':
+              schema:
+                type: boolean
         "401":
           description: Unauthorized
+          content:
+            '*/*':
+              schema:
+                type: boolean
         "403":
           description: Forbidden
+          content:
+            '*/*':
+              schema:
+                type: boolean
         "404":
           description: Not found
+          content:
+            '*/*':
+              schema:
+                type: boolean
         "204":
           description: No Content
+          content:
+            '*/*':
+              schema:
+                type: boolean
     patch:
       tags:
       - Комментарии
@@ -490,7 +601,7 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CommentDto'
-  /users/image/{id}/from-db:
+  /users:
     get:
       tags:
       - user-controller
@@ -502,11 +613,35 @@ paths:
         schema:
           type: integer
           format: int32
+      - name: "/image/{id}/from-db"
+        in: header
+        schema:
+          type: string
       responses:
         "200":
           description: OK
           content:
-            '*/*':
+            image/jpeg:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/gif:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/*:
               schema:
                 type: object
                 additionalProperties:
@@ -553,7 +688,37 @@ paths:
         "200":
           description: OK
           content:
-            '*/*':
+            image/png:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/jpeg:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/gif:
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+            image/*:
               schema:
                 type: object
                 additionalProperties:
