# src/main/java/ru/skypro/homework/controller/UserController.java
@@ -6,30 +6,33 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+
 
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import ru.skypro.homework.dto.NewPasswordDto;
 import ru.skypro.homework.dto.UpdateUserDto;
 import ru.skypro.homework.dto.UserDto;
-import ru.skypro.homework.service.impl.UserService;
+import ru.skypro.homework.entity.ImageEntity;
+import ru.skypro.homework.service.impl.UserServiceImpl;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
-
+import java.util.concurrent.atomic.AtomicReference;
 
 @Slf4j
 @RestController
 @CrossOrigin(value = "http://localhost:3000")
 @RequestMapping("users")
 public class UserController {
-    private final UserService userService;
+    private final UserServiceImpl userService;
 
-    public UserController(UserService userService) {
+    public UserController(UserServiceImpl userService) {
         this.userService = userService;
     }
 
@@ -57,10 +60,9 @@ public class UserController {
             })
     @PostMapping("/set_password")
     @ResponseStatus(HttpStatus.FORBIDDEN)
+
     public void setPassword(@RequestBody NewPasswordDto newPassword) {
         userService.setPassword(newPassword);
-        {
-        }
     }
 
     @Operation(summary = "Получить информацию об авторизованном пользователе",
@@ -132,14 +134,19 @@ public class UserController {
                     )
             })
     @PatchMapping(value = "me/image", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-
     public void updateUserImage(@RequestParam("image") MultipartFile file) throws IOException {
         userService.updateUserImage(file);
     }
 
-    @GetMapping("/image/{id}/from-db")
+    @GetMapping(headers = "/image/{id}/from-db", produces = {MediaType.IMAGE_JPEG_VALUE,
+            MediaType.IMAGE_JPEG_VALUE,
+            MediaType.IMAGE_GIF_VALUE, "image/*"})
     public Map<Integer, ArrayList<byte[]>> getUserImage(@PathVariable Integer id) {
         userService.getUserImage(id);
+        ImageEntity image = userService.getUserImage(id);
+        AtomicReference<HttpHeaders> headers = new AtomicReference<>(new HttpHeaders());
+        headers.get().setContentType(MediaType.parseMediaType(image.getMediaType()));
+        headers.get().setContentLength(image.getData().length);
         return new HashMap<>();
     }
 }
